<resources>
    <string name="app_name">Mareu</string>

    <!--Main Activity-->
    <string name="toolbar_title">Mareu</string>

    <!--Add Meeting Activity-->
    <string name="add_meeting_title">Programmer une réunion</string>
    <string name="select_subject">Renseignez le sujet de la réunion</string>
    <string name="select_room">Sélectionnez une salle:</string>
    <string name="select_date">Sélectionnez une date:</string>
    <string name="select_hour">Sélectionnez une heure:</string>
    <string name="select_participants">Entrez le mail des participants</string>
    <string name="validate">Confirmer</string>
    <string name="cancel">Annuler</string>

    <!--Strain Meetings-->
    <string name="filter_meetings">Filtrer</string>
    <string name="filter_meetings_date">Date</string>
    <string name="filter_meetings_with_room">Filtrer par salle</string>
    <string name="filter_meetings_with_date">Filtrer par date</string>
    <string name="confirm_filter_button">Confirmer</string>
    <string name="cancel_filter_button">Effacer</string>

    <!--Item-->
    <string name="meeting_sticker">Sticker</string>
    <string name="meeting_information">%1$s - %2$s - %3$s</string>
    <string name="delete_meeting">Supprimer</string>

    <!--Menu-->
    <string name="strain_meetings_action">StrainMeetings</string>
</resources>