<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_meeting_toolbar"
        app:title="@string/add_meeting_title"
        app:titleTextColor="#FFFFFF"
        android:padding="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <LinearLayout
        android:id="@+id/add_meeting_linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/spinner_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/select_room"
            android:textSize="18sp"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"/>

        <Spinner
            android:id="@+id/spinner_room_add_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <EditText
        android:id="@+id/select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center"
        android:text="@string/select_date"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_linearlayout"/>

    <EditText
        android:id="@+id/select_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/select_hour"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/select_date"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/select_hour"
        android:layout_marginTop="50dp">
        <EditText
            android:id="@+id/select_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_participants"
            android:padding="20dp"/>
    </ScrollView>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:padding="20sp"/>

    <Button
        android:id="@+id/button_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/validate"
        android:backgroundTint="@color/colorPrimary"
        android:padding="20sp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>